# ccs2csp

./: .gitignore  GEN.csp  LICENSE  MAIN.bib  MAIN.synctex.gz(busy)  MAIN.tex  OTHERS  README.md  ccs2csp.cabal  stack.yaml
app/: Main.lhs
doc/: ccs2csp.sty
src/: AbsCCS.hs  CCS.bnfc  CCSm.lhs  CSPm.lhs  Control.lhs  Examples.lhs  LexCCS.hs  ParCCS.hs  ParCCS.info  Semantics.lhs  Syntax.lhs  Translate.lhs  test-bnfc.ccs
test/: Spec.hs  bad.proc  bisimA.proc  bisimAB.csp  bisimB.proc  compose.proc  input.proc  mixup.proc  output.proc  rename.proc  restrict.proc  sum.proc  zero.csp  zero.proc
test/draft/: example1.csp  example1.proc  example1.txt  example10.txt  example11.txt  example2.csp  example2.proc  example2.txt  example20-1.csp  example20-2.csp  example20-2.txt  example21.txt  example25.csp  example25.proc  example25.txt  example27.txt  example3.csp  example3.txt  example30.txt  example36-1.proc  example36-2.csp  example36-2.txt  example4-1.csp  example4-1.proc  example4-1.txt  example4-2.csp  example4-2.proc  example4-2.txt  example40.txt  example41.txt  example5.txt  example6.txt  example7.txt  example8.csp  example8.proc  example9-1.csp  example9-1.txt  example9-2.proc  example9.csp
