name:                ccs2csp
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewbutterfield/literateStack#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
copyright:           (c) 2020 Andrew Butterfield
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Syntax
                     , Examples
                     , Semantics
                     , Translate
                     , Control
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  default-language:    Haskell2010

executable ccs2csp
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ccs2csp
  default-language:    Haskell2010

test-suite ccs2csp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ccs2csp
                     , HUnit
                     -- , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     -- , test-framework-quickcheck2
  -- other-modules:

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/andrewbutterfield/literateStack
